--- a/HR.LeaveManagement.BlazorUI/Pages/LeaveTypes/Index.razor
+++ b/HR.LeaveManagement.BlazorUI/Pages/LeaveTypes/Index.razor
@@ -52,20 +52,17 @@ else
                     </td>
                     <td>
                         <button @onclick=@(() => AllocateLeaveType(leaveType.Id))
-                            class="btn btn-dark"
+                            class="btn btn-dark">
                             Allocate Leave
-                        />
+                        </button>
                         <button @onclick="@(() => EditLeaveType(leaveType.Id))"
-                                class="btn btn-dark"
+                                class="btn btn-warning">
                                 Edit
-                        />
-                        <button @onclick="@(() => DetailsLeaveType(leaveType.Id))"
-                                class="btn btn-dark"
-                                Details />
+                        </button>
                         <button @onclick="@(() => DeleteLeaveType(leaveType.Id))"
-                                class="btn btn-dark"
+                                class="btn btn-danger">
                                 Delete
-                        />
+                        </button>
                     </td>
                 </tr>
             }
