--- a/HR.LeaveManagement.BlazorUI/Pages/Index.razor
+++ b/HR.LeaveManagement.BlazorUI/Pages/Index.razor
@@ -2,8 +2,20 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-center">Welcome to HR leave management system</h1>
+<br/>
+<br />
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+<AuthorizeView>
+    <Authorized>
+        <button class="btn btn-danger" @onclick="Logout"></button>
+    </Authorized>
+    <NotAuthorized>
+        <button class="btn btn-success" @onclick="GoToLogin"></button>
+        ||
+        <button class="btn btn-primary" @onclick="GoToRegister"></button>
+    </NotAuthorized>
+</AuthorizeView>
+
