leave allocation feature

--- a/HR.LeaveManagement.BlazorUI/Pages/LeaveTypes/CreateLeaveType.razor
+++ b/HR.LeaveManagement.BlazorUI/Pages/LeaveTypes/CreateLeaveType.razor
@@ -1,4 +1,7 @@
 ﻿@page "/leavetypes/create/"
+
+@attribute [Authorize(Roles ="Administrator")]
+
 @inherits CreateLeaveTypeBase
 
 <h3>Create a new Leave Type</h3>
