--- a/HR.LeaveManagement.BlazorUI/_Imports.razor
+++ b/HR.LeaveManagement.BlazorUI/_Imports.razor
@@ -11,3 +11,4 @@
 @using HR.LeaveManagement.BlazorUI.Pages.LeaveTypes
 @using HR.LeaveManagement.BlazorUI.Models
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
