--- a/HR.LeaveManagement.BlazorUI/Pages/Login.razor
+++ b/HR.LeaveManagement.BlazorUI/Pages/Login.razor
@@ -14,7 +14,7 @@
             <DataAnnotationsValidator/>
             <ValidationSummary/>
 
-            <div class=""form-group">
+            <div class="form-group">
                 <label class="control-label">Email</label>
                 <InputText id="userName" class="form-control" @bind-Value="@Model.Email"></InputText>
                 <ValidationMessage For="@(() => Model.Email)"/>
