--- a/HR.LeaveManagement.BlazorUI/Pages/Index.razor
+++ b/HR.LeaveManagement.BlazorUI/Pages/Index.razor
@@ -13,9 +13,9 @@
         <button class="btn btn-danger" @onclick="Logout"></button>
     </Authorized>
     <NotAuthorized>
-        <button class="btn btn-success" @onclick="GoToLogin"></button>
+        <button class="btn btn-success" @onclick="GoToLogin">Login</button>
         ||
-        <button class="btn btn-primary" @onclick="GoToRegister"></button>
+        <button class="btn btn-primary" @onclick="GoToRegister">Register</button>
     </NotAuthorized>
 </AuthorizeView>
 
