--- a/HR.LeaveManagement.BlazorUI/Shared/NavMenu.razor
+++ b/HR.LeaveManagement.BlazorUI/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link">
-                        <--!Implement logout feature!-- />
+                       @* <--!Implement logout feature!-- /> *@
                         <span class="oi oi-person" aria-hidden="true"></span>@context.User?.Identity?.Name 
                     </NavLink>
                 </div>
