--- a/HR.LeaveManagement.BlazorUI/Shared/NavMenu.razor
+++ b/HR.LeaveManagement.BlazorUI/Shared/NavMenu.razor
@@ -14,32 +14,24 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        @* <--!Implement logout feature!-- /> *@        
+        <AuthorizeView Roles="Employee">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="leaverequests/employeeindex">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
+                </NavLink>
+            </div>
+        </AuthorizeView>
+
+        <AuthorizeView Roles="Administrator">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="leaverequests/">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
+                </NavLink>
+            </div>
+        </AuthorizeView>
+
         <AuthorizeView>
-            <Authorized>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link">
-                       @* <--!Implement logout feature!-- /> *@
-                        <span class="oi oi-person" aria-hidden="true"></span>@context.User?.Identity?.Name 
-                    </NavLink>
-                </div>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="logout">
-                        <span class="oi oi-arrow-circle-left" aria-hidden="true"></span> Log Out
-                    </NavLink>
-                </div>
-                <hr/>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="leavetypes/">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Types
-                    </NavLink>
-                </div>
-                
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="leaverequests/">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
-                    </NavLink>
-                </div>
-            </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="register">
@@ -53,7 +45,6 @@
                 </div>
             </NotAuthorized>
         </AuthorizeView>
-        
     </nav>
 </div>
 
