fixed leave types handler

--- a/HR.LeaveManagement.BlazorUI/Pages/Index.razor
+++ b/HR.LeaveManagement.BlazorUI/Pages/Index.razor
@@ -10,7 +10,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <button class="btn btn-danger" @onclick="Logout"></button>
+        <button class="btn btn-danger" @onclick="Logout">Logout</button>
     </Authorized>
     <NotAuthorized>
         <button class="btn btn-success" @onclick="GoToLogin">Login</button>
