--- a/HR.LeaveManagement.BlazorUI/Shared/NavMenu.razor
+++ b/HR.LeaveManagement.BlazorUI/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        @* <--!Implement logout feature!-- /> *@        
+           
         <AuthorizeView Roles="Employee">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="leaverequests/employeeindex">
@@ -27,6 +27,11 @@
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="leaverequests/">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="leavetypes/">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Types
                 </NavLink>
             </div>
         </AuthorizeView>
